--- a/Cours1/index.html
+++ b/Cours1/index.html
@@ -1,1 +1,45 @@
 HELLO WORLD <3
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Le titre </title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>
+  <h1>Hello World</h1>
+
+  <img src="images/grosse_vague.jpeg" alt="tres_belle_vague">
+
+  <a
+  href="https://img.redbull.com/images/c_crop,x_0,y_673,h_2736,w_5472/c_fill,w_2700,h_1400/q_auto:low,f_auto/redbullcom/2020/5/1/mqgjwevxveuc6fcqvdfc/carissa-moore-surf-vague-tahiti">coucoupetithomme
+  </a>
+
+  <h2>Poème Charles Baudelaire</h2>
+  <p>L’homme et la mer
+  <p>Homme libre, toujours tu chériras la mer !
+	La mer est ton miroir ; tu contemples ton âme
+	Dans le déroulement infini de sa lame,
+	Et ton esprit n’est pas un gouffre moins amer.
+  </p>
+	Charles Baudelaire
+	
+
+	Tu te plais à plonger au sein de ton image ;
+	Tu l’embrasses des yeux et des bras, et ton coeur
+	Se distrait quelquefois de sa propre rumeur
+	Au bruit de cette plainte indomptable et sauvage.
+
+	Vous êtes tous les deux ténébreux et discrets :
+	Homme, nul n’a sondé le fond de tes abîmes ;
+	Ô mer, nul ne connaît tes richesses intimes,
+	Tant vous êtes jaloux de garder vos secrets !
+
+	Et cependant voilà des siècles innombrables
+	Que vous vous combattez sans pitié ni remord,
+	Tellement vous aimez le carnage et la mort,
+	Ô lutteurs éternels, ô frères implacables !
+</p>
+</body>
+</html>
